bug - styling overflow fix

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ textarea {
     margin-top: 2rem;
     font-size: large;
     font-family: inherit;
+    overflow:scroll;
+
 }
 
 button {
